--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body{
     background: #cdcbcb;
+    font-family: Helvetica;
 }
 .bl-background {
     width:	100%;
@@ -7,11 +8,12 @@ body{
     margin:	auto;
     /*Ширина екрану після якої з’являться
     поля*/
-    max-width:	700px;	
+    max-width:	800px;	
 }
 
 .bl-list {
     margin-bottom: 10px;
+    width: 500px;
 }
 
 .bl-bought {
@@ -21,77 +23,134 @@ body{
 .bl-row{
     border: 1px;
     padding: 14px;
+    border-color: darkgrey;
 }
 
 .bl-product{
     float: left;
     padding: 14px;
+    width: 100px;
 }
 .bl-count{
      float:	left;
     padding: 14px;
+    width: 100px;
 }
 
 .bl-buttons{
     float:	right;
     padding: 14px;
+    width: 120px;
 }
 
 .bl-input{
     background: white;
     padding: 14px;
     border: 1px;
+    border-color: gray;
+    border: none;
 }
 
 .bl-leave{
     padding: 14px;
     border: 1px;
+    border-color: gray;
+    border: none;
 }
 
 .bl-bb{
     padding: 14px;
     border: 1px;
+    border-color: gray;
+    border: none;
 }
 
 
 .bl-containerLeft{
     background: white;
     padding: 14px;
+    width: 500px;
+    border-radius: 2%;
+    box-shadow: 0px 3px 4px gray;
     float: left;
 }
 
 .bl-containerRight{
     background: white;
+    width: 200px;
     padding: 14px;
+    border-radius: 2%;
+    box-shadow: 0px 3px 4px gray;
     float: right;
 }
 
+.bl-title{
+    border: 1px;
+    border-color: gray;
+    border: none;
+}
+
+.bl-item{
+    background: lightgray;
+    padding: 6px;
+    border:2px;
+    border-color: white;
+}
+
+.bl-amount{
+    background: #f2711c;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    border: none;
+}
 
 /*Кнопки*/
 .bl-label {
-    background: #cdcbcb;
+    background: lightgray;
+    padding: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20%;
     border: 1px;
 }
 .bl-plus {
-    background: #04a613;
+    background: #21ba45;
     border-radius: 100%;
+    width: 30px;
+    height: 30px;
     color: white;
+    box-shadow: 0px 3px #21a341;
+    border: none;
 }
 .bl-minus {
     background: #db2828;
     border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 3px #be2627;
+    border: none;
     color: white;
 }
 
 .bl-buy {
-    background: lightgrey;
-    border-radius: 20%;
-    color: grey;
+    background: #f5f5f5;
+    border-radius: 10%;
+    height: 30px;
+    box-shadow: 0px 3px lightgray;
+    width: 80px;
+    padding: 5px;
+    border: none;
+    color: gray;
 }
 
 .bl-cross {
     background: #db2828;
     border-radius: 20%;
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 3px #be2627;
+    border: none;
     color: white;
 }
 
