--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body{
     background: #cdcbcb;
     font-family: Helvetica;
 }
+
 .bl-background {
     width:	100%;
     /*Вирівнює елемент по центру*/
@@ -17,7 +18,13 @@ body{
 }
 
 .bl-bought {
+    margin: auto;
     background: white;
+    width: 200px;
+    padding: 14px;
+    border-radius: 2%;
+    box-shadow: 0px 3px 4px gray;
+    float: right;
 }
 
 .bl-row{
@@ -60,7 +67,7 @@ body{
 
 .bl-bb{
     padding: 14px;
-    border: 1px;
+    border: 1px solid;
     border-color: gray;
     border: none;
 }
@@ -75,15 +82,6 @@ body{
     float: left;
 }
 
-.bl-containerRight{
-    background: white;
-    width: 200px;
-    padding: 14px;
-    border-radius: 2%;
-    box-shadow: 0px 3px 4px gray;
-    float: right;
-}
-
 .bl-title{
     border: 1px;
     border-color: gray;
@@ -92,17 +90,24 @@ body{
 
 .bl-item{
     background: lightgray;
-    padding: 6px;
     border:2px;
+    margin: 2px;
     border-color: white;
+    font-size: 12px;
+    padding: 4px;
+    border-radius: 10%;
 }
 
 .bl-amount{
     background: #f2711c;
     border-radius: 100%;
+    padding: 3px;
+    padding-left: 6px;
+    padding-right: 6px;
     width: 20px;
     height: 20px;
     border: none;
+    color: white;
 }
 
 /*Кнопки*/
@@ -158,4 +163,7 @@ body{
     background: #2185d0;
     border-radius: 10%;
     color: white;
+    border: none;
+    height: 22px;
+    width: 80px;
 }
